[ADD] 添加 StringTable 相关知识